fix: jumplink highlight area, modal containment

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -170,8 +170,12 @@ img {
     padding-right: 10px;
 }
 
-.padding {
+.padding4 {
     padding: 4px;
+}
+
+.padding10 {
+    padding: 10px;
 }
 
 ul {
